--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
     },
     "content_scripts" : [
         {
-            "js" : "main.js",
-            "main": "index.js"
+            "js" : "main.js"
         }
     ]
 }
